@@ -4,7 +4,7 @@ This File Contains Important News
 * Integration with Evolution-Data-Server for a common address book between Evolution and GnomeMeeting
 * Audio Codecs plugins support
 * New Speex codec compatible with Speex Windows
-* Pure LDAP support in the address book
+* LDAP support in the address book
 * ENUM support to allow people to be callable through IP using their real phone number
 * Transparent NAT traversal when connected to a non-NATTED (or NAT-aware) GnomeMeeting client
 * STUN Support
@@ -13,6 +13,7 @@ This File Contains Important News
 * Ability to play the ring tone sound event through another device than the one used for calls
 * Added auto-completion from the calls history and from the address book for the URL bar
 * Added ALSA DSNOOP support.
+* Display the number of missed calls in the status bar.
 * Many code cleanups
 
 1.0.2 :
